my firts commit agencia

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,20 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-item>
+    <ion-label position="stacked">Usuario</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+  <ion-item>
+      <ion-label position="stacked">Contraseña</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <ion-button color="primary">Iniciar Sesion</ion-button>
   </div>
 </ion-content>
