--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,3 +1,16 @@
-<p>
-  navbar works!
-</p>
+<ion-toolbar>
+    <ion-buttons slot="secondary">
+        <ion-button>
+            <ion-icon slot="icon-only" name="contact"></ion-icon>
+        </ion-button>
+        <ion-button>
+            <ion-icon slot="icon-only" name="search"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="primary">
+        <ion-button color="secondary">
+            <ion-icon slot="icon-only" name="more"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+    <ion-title>Default Buttons</ion-title>
+</ion-toolbar>
