--- a/src/components/sidebar/sidebar.component.html
+++ b/src/components/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
 <ion-split-pane>
   <ion-menu type="overlay">
     <ion-header>
-      <ion-toolbar color="success">
+      <ion-toolbar color="dark">
 
         <ion-title>
           <!-- <img class="imagen" src="assets/img/fastlife.png" alt=""> -->
@@ -99,10 +99,5 @@
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet main>
-  </ion-router-outlet>
 </ion-split-pane>
-
-
-
-<!-- <ion-router-outlet main></ion-router-outlet> -->
+<ion-router-outlet main></ion-router-outlet>
