--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -1,25 +1,29 @@
-<ion-content color="dark" style="align-content: center;">
-  <form #form="ngForm" (ngSubmit)="loginAutenticated(form)">
-    <ion-grid>
-      <ion-row class="ion-justify-content-center">
-        <ion-col class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
-          <div class="ion-text-center">
-            <h3>Iniciar Sesion</h3>
-          </div>
-          <div class="ion-padding">
-            <ion-item>
-              <ion-input name="name" type="text" placeholder="Usuario" ngModel required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input name="confirm" type="password" placeholder="Constraseña" ngModel required></ion-input>
-            </ion-item>
-          </div>
-          <div class="ion-padding">
-            <ion-button size="medium" type="submit" expand="block"  [routerLink]="[ '/home' ]">Iniciar Sesion</ion-button>
-            <ion-button size="medium" type="submit" expand="block"  [routerLink]="[ '/register' ]">Crear Cuenta</ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
+<ion-content>
+  <ion-card color="dark">
+    <form #form="ngForm" (ngSubmit)="loginAutenticated()">
+      <ion-grid>
+        <ion-row class="ion-justify-content-center">
+          <ion-col class="ion-align-self-center" size-md="6" size-lg="5" size-xs="12">
+            <div class="ion-text-center">
+              <h3>Iniciar Sesion</h3>
+            </div>
+            <div class="ion-padding">
+              <ion-item>
+                <ion-input name="name" type="text" placeholder="Usuario" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="password" type="password" placeholder="Constraseña" ngModel required></ion-input>
+              </ion-item>
+            </div>
+            <div class="ion-padding">
+              <ion-button type="submit" expand="block">Iniciar Sesion
+              </ion-button>
+              <ion-button type="submit" expand="block">Crear Cuenta
+              </ion-button>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </ion-card>
 </ion-content>
